gamer section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,128 @@ body {
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,700&family=Poppins:ital,wght@0,300;0,700;1,400&family=Roboto+Condensed:wght@700&family=Roboto+Slab&family=Sofia+Sans+Condensed:wght@800&family=Work+Sans:wght@700;800&display=swap');
 
 }
+
+/* nav styles */
+header {
+    background-color: lightpink;
+    padding: 30px 150px;
+}
+
+nav>h3>span {
+    color: brown;
+    font-size: 2rem;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav>ul {
+    display: flex;
+}
+
+nav>ul>li {
+    list-style: none;
+    margin-right: 30px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+
+.letters {
+    color: rgb(63, 25, 90);
+}
+
+.icon-color {
+    color: red;
+    width: 1rem;
+}
+
+
+
+
+.sign-in {
+    background-color: orange;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-right: 30px;
+    border-radius: 1em;
+}
+
+.go-rogue {
+    background-color: rgb(0, 102, 255);
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-right: 30px;
+    border-radius: 1em;
+}
+
+.container {
+    display: flex;
+    max-width: 1000px;
+    height: 750px;
+}
+
+.banner1 {
+    width: 45%;
+}
+
+.banner2 {
+    width: 55%;
+}
+
+/* main section1 styles */
+.who-are-gamer {
+    display: flex;
+
+    background-color: lightpink;
+    padding: 30px 50px;
+}
+
+.gamer-intro1 {
+    width: 868px;
+    height: 489px;
+}
+
+.gamer-intro2 {
+    width: 500px;
+    height: 400px;
+}
+
+.tool-tip {
+    border: 1px solid purple;
+    font-size: 2em;
+}
+
+@media screen and(max-width:576px) {
+    nav {
+        display: block;
+    }
+
+    nav>ul {
+        display: block;
+    }
+
+    .container {
+        display: block;
+    }
+
+    .banner1 {
+        width: 100%;
+    }
+
+    .banner2 {
+        width: 100%;
+    }
+
+    .banner2,
+    img {
+        position: relative;
+    }
+
+
+}
